* fix border style by set overflow to hidden.

--- a/src/less/modules/messager.less
+++ b/src/less/modules/messager.less
@@ -16,6 +16,7 @@
   border-radius: @messager-radius;
   margin: 10px;
   pointer-events: auto;
+  overflow: hidden;
 }
 
 .messager-content {
